# minecraftgl

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  program
.cache/clangd/index/: glad.c.E11200F6D30B7E1E.idx  glad.h.04596B1EDFC7F08D.idx  khrplatform.h.EFD7A1C2F99450EE.idx  main.c.F333F2B7218D5660.idx
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.c  shader.c
